<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_CRYO_BIN_CTRL_STATE" Id="{f2128adf-4a7d-41b7-8756-8fc05346ad57}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CRYO_BIN_CTRL_STATE :
(
	NONE := 0,
	OFF,					// Controller OFF, Actuator OFF
	ACTIVE_SWITCHING_ON,	// Activating Controller
	ACTIVE_OFF,				// Controller active, Actuator OFF
	ACTIVE_ON,				// Controller active, Actuator ON
	ACTIVE_SWITCHING_OFF,	// Switching Actuator OFF and going OFF with Controller
	ERROR					// Actuator failure
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>